# syst-pulse

./: README.md  package.json
.github/workflows/: build.sh  ci.yml  release.yml
public/: index.html
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: lib.rs  main.rs
