[package]
name = "syst-pulse"
version = "0.1.0"
description = "A Tauri App for system monitoring"
authors = ["Kibalo Jules Tinaka"]
edition = "2021"

[lib]
name = "syst_pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "syst-pulse"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.32"
chrono = "0.4"
nix = { version = "0.29", features = ["fs"] }